--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
     --color-text-primary: #000000;
     --color-text-secondary: #333333;
     --color-text-light: #555555;
+    --color-text-logo: #cfc3c3;
     
     /* Border colors */
     --color-border: #e0e0e0;
